# inwhale

./: CONTRIBUTING.md  LICENSE  README.md  TODO.md  contribution.md  main.py  pyproject.toml
examples/: asymmetric_demo.py  mid_tread_mid_rise.py  uniform_demo.py
inwhale/core/: quantizer.py  uniform.py
inwhale/observers/: base.py  minmax.py  moving_average.py  mse.py
inwhale/rounding/: bankers.py  base.py  floor_ceil.py  nearest.py  round_away_zero.py  truncation.py
tests/: test_asymmetric_uniform.py  test_bankers_rounding.py  test_deadzone_symmetric.py  test_mid_tread_mid_rise.py  test_symmetric_uniform.py
